--- a/mise_en_sitaution_quizz/base/templates/home.html
+++ b/mise_en_sitaution_quizz/base/templates/home.html
@@ -6,7 +6,7 @@
 {% endblock javascript %}
 {% load static %}
 {% block style %}
-    <link rel="stylesheet" href="{% static "css/home.css" %}">
+    <link rel="stylesheet" href="{% static "css/quiz_list.css" %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 {% endblock style %}
 {% block title %}
@@ -14,7 +14,28 @@
 {% endblock title %}
 {% block content %}
     {% include "components/nav.html" %}
-    <div class="container mt-3">
-        
+    <div class="container mt-5">
+        <h1>All the Quizzes</h1>
+        <a href="{% url 'base:create_quiz' %}" class="btn btn-primary mb-3">Create New Quiz</a>
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Description</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for quiz in quizzes %}
+                    <tr>
+                        <td>{{ quiz.title }}</td>
+                        <td>{{ quiz.description }}</td>
+                        <td>
+                            <a href="{% url 'base:take_quiz' quiz.pk %}" class="btn btn-success">Take Quiz</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 {% endblock content %}
