--- a/mise_en_sitaution_quizz/base/templates/quiz/quiz_list.html
+++ b/mise_en_sitaution_quizz/base/templates/quiz/quiz_list.html
@@ -12,7 +12,7 @@
 <body>
     {% include "components/nav.html" %}
     <div class="container mt-5">
-        <h1>Quizzes</h1>
+        <h1>Your Quizzes</h1>
         <a href="{% url 'base:create_quiz' %}" class="btn btn-primary mb-3">Create New Quiz</a>
         <table class="table table-bordered">
             <thead>
